2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot-session.cc (run_impl): Use boost::format rather
	than printf specifiers.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* Update po files.

	* po/POTFILES.in: Add dchroot files.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* .cvsignore: Update for dchroot.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): Use ACTION_LOCATION, not
	ACTION_INFO_LOCATION.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update for version 0.2.3-1.

	* debian/README.Debian: Update dchroot notes.

	* debian/rules (config.status): Add --enable-dchroot to configure,
	to package the dchroot + wrapper.

	* debian/control (schroot): Provide, Conflict and Replace dchroot.
	Enhances sbuild.  Suggest lvm-common for LVM support.  Update
	description.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* NEWS: Add dchroot.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.1.in: Document new --location option.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* TODO: Add dchroot.

	* configure.ac: Create schroot/dchroot.1.

	* schroot/Makefile.am: If --enable-dchroot was used, build and
	install dchroot and dchroot.1.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.h (session): The contructor chroots
	argument is a const reference rather than a value.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot.1.in: Add manual page for dchroot.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc: If SBUILD_DCHROOT_COMPAT is defined, run in
	dchroot compatibility mode, using the alternate
	dchroot::chroot_config and dchroot::session classes for reading
	the configuration and session handling.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.cc
	(options): Set dchroot_compat if SBUILD_DCHROOT_COMPAT is defined.
	(options): If dchroot_compat is set, use dchroot compatible